bugfix: hub post card: hide overflow

--- a/projects/charon/src/app/hub/components/hub-post-card/hub-post-card.component.scss
+++ b/projects/charon/src/app/hub/components/hub-post-card/hub-post-card.component.scss
@@ -8,6 +8,7 @@ $hub-post-card--horizontal--image-width: 31%;
 :host {
   background: $color-white;
   display: flex;
+  overflow: hidden;
 
   &.mod-vertical {
     border: 1px solid $color-outlines;
